style.css
/*CSS reset*/
* {
    padding: 0;
    margin: 0;
    box-sizing: border-box;
}

:root {
    /*Variables*/
    /*Colors*/
    --green: #ccd5ae;
    --brown: #d4a373;
    --light-green: #e9edc9;
    --light-brown: #faedcd;
    --light-beige: #fefae0;

    --shadow: #222a;
    /*box-shadow presets*/
    --tiny-shadow: 4px 4px 4px var(--shadow);
    --big-shadow: 8px 8px 8px var(--shadow);
    /*Sizes*/
    --pad: 30px;
    --marg: 30px;
    --gap: 50px;
 }

/*Fonts*/
h1, h2, h3, .nav-btn {
/*lugrasimo-regular*/
    font-family: "Lugrasimo", cursive;
    font-weight: 400;
    font-style: normal;
}

body {
    /*lexend-regular */
    font-family: "Lexend", sans-serif;
    font-optical-sizing: auto;
    font-weight: 400;
    font-style: normal;
}

/*Tags*/
body {
    background-color: var(--light-beige);
}

header {
    display: flex;
    min-width: fit-content;
    flex-direction: column;
    border-radius: 4em 4em 0 0;
    background-color: var(--brown);
    box-shadow: var(--big-shadow);
    padding: var(--pad);
    align-items: center;
    justify-content: space-around;
    gap: 1em;
    nav {
	display: flex;
	gap: 1em; 
    }
}

img {
    width: 100%;/*fixed wrong size on header art*/
}

/*classes*/

/*objects*/

.header-top {
    border-radius: 2em 2em 0 0;
    overflow: hidden;
    display: flex;
    align-items: center;
    justify-content: space-between;
    text-align: center;
    h1  {
	text-size: 4em;
	width: 8em; /*gets h1 in one line*/
	text-shadow: 4px 4px 2px #4445; /*original values didn't match figma*/
    }
}

.nav-btn {
    display: flex;
    min-width: fit-content;
    align-items: center;
    font-size: 20px; 
    white-space: nowrap;
    text-decoration: none;
    color: black;
    gap: 0.5em;
    background-color: var(--green);
    box-shadow: var(--tiny-shadow); 
    padding: 0.1em 1em;
    border-radius: 1em 1em 0 0;
}

.btn-clicked {
    border: 8px solid var(--light-brown);
    border-bottom-width: 0;
}

